Fix: Make it so the friends search has its own fragment.
- This was done to resolve a bug where it would show 'invite as friend' on the existing friends in the friendslist, due to #friends and #search sharing the same fragment.

- Also refactored some tests to not use .getLast() on lists, for more compatibility for older Java versions.